--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
   <meta charset="utf-8">
   <title>BigProject</title>
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
-<body class="mat-typography">
-  <app-root></app-root>
+<body class="mat-typography h-100">
+  <app-root class="d-flex flex-column h-100"></app-root>
 </body>
 </html>
