--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
 
 </head>
 <body class="mat-typography h-100">
-  <app-root class="d-flex flex-column h-100"></app-root>
+  <app-root class="d-flex flex-column"></app-root>
 </body>
 </html>
